Add an array to keep track of not visited squares && and start using makeComputerMove to get a random move from the computer

--- a/src/style.css
+++ b/src/style.css
@@ -26,10 +26,11 @@ body {
   cursor: crosshair;
 }
 
-.ship {
+#player-one-board > .ship {
   background-color: red;
 }
-.square {
+.square,
+#player-two-board > .ship {
   background-color: chartreuse;
 }
 
@@ -38,5 +39,5 @@ body {
 }
 
 .attacked{
-  background-color: black;
+  background-color: black !important
 }
